--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Connect 4</title>
 </head>
 
 <body>
+    <span id="msgPanel"></span>
     <canvas id="canvas"></canvas>
     <script src="main.js" type="module"></script>
 
